--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
     <meta charset="utf-8" />
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
 
-    <title>Vesperr Bootstrap Template - Index</title>
+    <title>Coffee To Business - Index</title>
     <meta content="" name="description" />
     <meta content="" name="keywords" />
 
     <!-- Favicons -->
-    <link href="assets/img/favicon.png" rel="icon" />
+    <link href="assets/img/Coffee to Business logo.webp" rel="icon" />
     <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon" />
 
     <!-- Google Fonts -->
@@ -32,6 +32,10 @@
     />
     <link href="assets/vendor/venobox/venobox.css" rel="stylesheet" />
     <link href="assets/vendor/aos/aos.css" rel="stylesheet" />
+    <link
+      href="https://fonts.googleapis.com/css?family=Montserrat&display=swap"
+      rel="stylesheet"
+    />
 
     <!-- Template Main CSS File -->
     <link href="assets/css/style.css" rel="stylesheet" />
@@ -120,6 +124,7 @@
             <h2 data-aos="fade-up" data-aos-delay="400">
               One stop solution to start your business online.
             </h2>
+            <span class="coffee-icon"><i class="fal fa-coffee"></i></span>
             <!-- <div data-aos="fade-up" data-aos-delay="800">
               <a href="#about" class="btn-get-started scrollto">Get Started</a>
             </div> -->
